--- a/package.json
+++ b/package.json
@@ -3,31 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-paginate": "^8.3.0",
-    "use-debounce": "^10.0.6",
     "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-paginate": "^7.1.4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
+    "prettier": "^3.0.0",
     "typescript": "^5"
   }
 }
