--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-paginate": "^8.3.0",
+    "use-debounce": "^10.0.6",
     "yup": "^1.7.1"
   },
   "devDependencies": {
